# 30secs

./: .gitignore  .pre-commit-config.yaml  30secs.spec  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml  version-bump.yml
scripts/: build.py  entrypoint.py
src/thirtysecs/: __init__.py  alerts.py  cli.py  config.py  core.py  deep_python.py  errors.py  handler.py  http.py  leak_report.py  logging.py  metrics.py  oom.py  utils.py
src/thirtysecs/collectors/: __init__.py  base.py  cpu.py  disk.py  memory.py  network.py  process.py  system.py
src/thirtysecs/commands/: health.py  inspect.py  leak.py  oom.py  snapshot.py
src/thirtysecs/formatters/: __init__.py  base.py  json_fmt.py  prometheus.py  table.py
tests/: test_alerts.py  test_deep_python.py  test_handler.py  test_leak_report.py  test_memory_collector.py  test_oom.py
